Update programming presentation

--- a/Presentations/images/directSend.graffle/data.plist
+++ b/Presentations/images/directSend.graffle/data.plist
@@ -14,7 +14,7 @@
 	<key>CanvasOrigin</key>
 	<string>{0, 0}</string>
 	<key>CanvasScale</key>
-	<real>1.3799999952316284</real>
+	<real>1.2000000476837158</real>
 	<key>ColumnAlign</key>
 	<integer>1</integer>
 	<key>ColumnSpacing</key>
@@ -1202,7 +1202,7 @@ readback}</string>
 			<real>-1</real>
 			<key>Points</key>
 			<array>
-				<string>{311.811, 155.905}</string>
+				<string>{311.811, 155.906}</string>
 				<string>{184.252, 184.252}</string>
 			</array>
 			<key>Style</key>
@@ -2510,9 +2510,9 @@ readback}</string>
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2006-10-10 09:37:54 +0200</string>
+	<string>2006-11-14 13:07:17 +0100</string>
 	<key>Modifier</key>
-	<string>Stefan Eilemann</string>
+	<string>eilemann</string>
 	<key>NotesVisible</key>
 	<string>NO</string>
 	<key>Orientation</key>
@@ -2587,15 +2587,15 @@ readback}</string>
 		<key>FitInWindow</key>
 		<true/>
 		<key>Frame</key>
-		<string>{{252, 1}, {1079, 877}}</string>
+		<string>{{441, 118}, {1079, 877}}</string>
 		<key>ShowRuler</key>
 		<false/>
 		<key>ShowStatusBar</key>
 		<true/>
 		<key>VisibleRegion</key>
-		<string>{{0, -10}, {593, 433.603}}</string>
+		<string>{{0, -11}, {695, 508.839}}</string>
 		<key>Zoom</key>
-		<string>1.300193</string>
+		<string>1.275779</string>
 	</dict>
 </dict>
 </plist>
