Refresh sort-last images with actual eqPly screenshots

--- a/Presentations/images/DB.graffle/data.plist
+++ b/Presentations/images/DB.graffle/data.plist
@@ -217,7 +217,7 @@
 			<key>ID</key>
 			<integer>10</integer>
 			<key>ImageID</key>
-			<integer>10</integer>
+			<integer>19</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
@@ -242,7 +242,7 @@
 			<key>ID</key>
 			<integer>9</integer>
 			<key>ImageID</key>
-			<integer>9</integer>
+			<integer>16</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
@@ -267,7 +267,7 @@
 			<key>ID</key>
 			<integer>8</integer>
 			<key>ImageID</key>
-			<integer>8</integer>
+			<integer>17</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
@@ -292,7 +292,7 @@
 			<key>ID</key>
 			<integer>7</integer>
 			<key>ImageID</key>
-			<integer>7</integer>
+			<integer>18</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
@@ -317,7 +317,7 @@
 			<key>ID</key>
 			<integer>6</integer>
 			<key>ImageID</key>
-			<integer>6</integer>
+			<integer>20</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{1, 0}</string>
@@ -353,7 +353,7 @@
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>11</integer>
+	<integer>21</integer>
 	<key>ImageLinkBack</key>
 	<array>
 		<dict/>
@@ -364,11 +364,11 @@
 	</array>
 	<key>ImageList</key>
 	<array>
-		<string>image10.png</string>
-		<string>image9.png</string>
-		<string>image8.png</string>
-		<string>image7.png</string>
-		<string>image6.png</string>
+		<string>image19.rgb</string>
+		<string>image16.rgb</string>
+		<string>image17.rgb</string>
+		<string>image18.rgb</string>
+		<string>image20.rgb</string>
 	</array>
 	<key>IsPalette</key>
 	<string>NO</string>
@@ -472,7 +472,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2006-12-18 16:06:43 +0100</string>
+	<string>2007-01-05 17:33:58 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -562,7 +562,7 @@
 		<key>FitInWindow</key>
 		<false/>
 		<key>Frame</key>
-		<string>{{232, 0}, {574, 878}}</string>
+		<string>{{374, 41}, {574, 878}}</string>
 		<key>ShowRuler</key>
 		<false/>
 		<key>ShowStatusBar</key>
