--- a/Presentations/images/DB2.graffle/data.plist
+++ b/Presentations/images/DB2.graffle/data.plist
@@ -102,7 +102,7 @@
 			<key>ID</key>
 			<integer>5</integer>
 			<key>ImageID</key>
-			<integer>10</integer>
+			<integer>15</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{0, 1}</string>
@@ -129,7 +129,7 @@
 			<key>ID</key>
 			<integer>4</integer>
 			<key>ImageID</key>
-			<integer>9</integer>
+			<integer>11</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{0, 1}</string>
@@ -156,7 +156,7 @@
 			<key>ID</key>
 			<integer>3</integer>
 			<key>ImageID</key>
-			<integer>8</integer>
+			<integer>12</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{0, 1}</string>
@@ -183,7 +183,7 @@
 			<key>ID</key>
 			<integer>2</integer>
 			<key>ImageID</key>
-			<integer>7</integer>
+			<integer>14</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{0, 1}</string>
@@ -210,7 +210,7 @@
 			<key>ID</key>
 			<integer>1</integer>
 			<key>ImageID</key>
-			<integer>6</integer>
+			<integer>13</integer>
 			<key>Magnets</key>
 			<array>
 				<string>{0, 1}</string>
@@ -404,7 +404,7 @@
 	<key>HPages</key>
 	<integer>1</integer>
 	<key>ImageCounter</key>
-	<integer>11</integer>
+	<integer>16</integer>
 	<key>ImageLinkBack</key>
 	<array>
 		<dict/>
@@ -415,11 +415,11 @@
 	</array>
 	<key>ImageList</key>
 	<array>
-		<string>image10.png</string>
-		<string>image9.png</string>
-		<string>image8.png</string>
-		<string>image7.png</string>
-		<string>image6.png</string>
+		<string>image15.rgb</string>
+		<string>image11.rgb</string>
+		<string>image12.rgb</string>
+		<string>image14.rgb</string>
+		<string>image13.rgb</string>
 	</array>
 	<key>IsPalette</key>
 	<string>NO</string>
@@ -523,7 +523,7 @@
 		</dict>
 	</array>
 	<key>ModificationDate</key>
-	<string>2006-10-18 19:26:56 +0200</string>
+	<string>2007-01-05 18:14:45 +0100</string>
 	<key>Modifier</key>
 	<string>Stefan Eilemann</string>
 	<key>NotesVisible</key>
@@ -570,16 +570,6 @@
 		<array>
 			<string>int</string>
 			<string>0</string>
-		</array>
-		<key>NSPrinter</key>
-		<array>
-			<string>coded</string>
-			<string>BAtzdHJlYW10eXBlZIHoA4QBQISEhAlOU1ByaW50ZXIAhIQITlNPYmplY3QAhZKEhIQITlNTdHJpbmcBlIQBKxBocCBMYXNlckpldCAyMzAwhoY=</string>
-		</array>
-		<key>NSPrinterName</key>
-		<array>
-			<string>string</string>
-			<string>hp LaserJet 2300</string>
 		</array>
 		<key>NSReversePageOrder</key>
 		<array>
